--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.min.css" type="text/css" />
     <script type="text/javascript" src="vendor/jquery/dist/jquery.min.js"></script>
-    <script type="text/javascript" src="vendor/bootstrap/dist/js/boostrap.min.js"></script>
+    <script type="text/javascript" src="vendor/bootstrap/dist/js/bootstrap.min.js"></script>
     <title>Calculadora de Ganancias</title>
 </head>
 <body>
-
+    <div class="container">
+        <h1>Calculadora de Ganancias</h1>
+    </div>
 </body>
 </html>
