--- a/index.html
+++ b/index.html
@@ -10,6 +10,25 @@
 <body>
     <div class="container">
         <h1>Calculadora de Ganancias</h1>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="mes1">Enero</label>
+                    <input type="text" class="form-control mes" id="mes1">
+                </div>
+            </div>
+            <div class="col-md-12"></div>
+            <div class="col-md-12"></div>
+            <div class="col-md-12"></div>
+            <div class="col-md-12"></div>
+            <div class="col-md-12"></div>
+            <div class="col-md-12"></div>
+            <div class="col-md-12"></div>
+            <div class="col-md-12"></div>
+            <div class="col-md-12"></div>
+            <div class="col-md-12"></div>
+            <div class="col-md-12"></div>
+        </div>
     </div>
 </body>
 </html>
